--- a/base_project/src/app/pages/home/plantilla/plantilla.component.html
+++ b/base_project/src/app/pages/home/plantilla/plantilla.component.html
@@ -3,7 +3,7 @@
   <nav class="navbar navbar-expand-lg navbar-dark fixed-top" id="mainNav">
     <div class="container">
       <a class="navbar-brand" href="#page-top"
-        ><img src="/base_project/src/assets/img/navbar-logo.svg" alt="logo"/>
+        ><img src="/base_project/src/assets/img/navbar-logo.svg" alt="logo" />
       </a>
       <button
         class="navbar-toggler"
@@ -20,12 +20,8 @@
       <div class="collapse navbar-collapse" id="navbarResponsive">
         <ul class="navbar-nav text-uppercase ms-auto py-4 py-lg-0">
           <li class="nav-item">
-            <a class="nav-link" href="#services">Services</a>
-          </li>
-          <li class="nav-item">
             <a class="nav-link" href="#portfolio">Portfolio</a>
           </li>
-          <li class="nav-item"><a class="nav-link" href="#about">About</a></li>
           <li class="nav-item"><a class="nav-link" href="#team">Team</a></li>
           <li class="nav-item">
             <a class="nav-link" href="#contact">Contact</a>
@@ -39,12 +35,10 @@
     <div class="container">
       <div class="masthead-subheading">Welcome To Our Studio!</div>
       <div class="masthead-heading text-uppercase">It's Nice To Meet You</div>
-      <a class="btn btn-primary btn-xl text-uppercase" href="#services"
-        >Tell Me More</a
-      >
+      <a class="btn btn-primary btn-xl text-uppercase" href="#services">Tell Me More</a>
     </div>
   </header>
-  
+
   <!-- Portfolio Grid-->
   <section class="page-section bg-light" id="portfolio">
     <div class="container">
@@ -220,47 +214,33 @@
       </div>
     </div>
   </section>
-  
+
   <!-- Team-->
   <section class="page-section bg-light" id="team">
     <div class="container">
       <div class="text-center">
-        <h2 class="section-heading text-uppercase">Our Amazing Team</h2>
+        <h2 class="section-heading text-uppercase">Nuestro equipo</h2>
         <h3 class="section-subheading text-muted">
-          Lorem ipsum dolor sit amet consectetur.
+          Realizado en Diseño de Intefaces via Angular, trabajo de evaluacion parte 1.
         </h3>
       </div>
-      <div class="row">
-        <div class="col-lg-4">
-          <div class="team-member">
-            <img
-              class="mx-auto rounded-circle"
-              src="/base_project/src/assets/img/team/1.jpg"
-              alt="..."
-            />
-            <h4>Parveen Anand</h4>
-            <p class="text-muted">Lead Designer</p>
-            <a class="btn btn-dark btn-social mx-2" href="#!"
-              ><i class="fab fa-twitter"></i
-            ></a>
-            <a class="btn btn-dark btn-social mx-2" href="#!"
-              ><i class="fab fa-facebook-f"></i
-            ></a>
-            <a class="btn btn-dark btn-social mx-2" href="#!"
-              ><i class="fab fa-linkedin-in"></i
-            ></a>
-          </div>
-        </div>
-
-      </div>
-      <div class="row">
-        <div class="col-lg-8 mx-auto text-center">
-          <p class="large text-muted">
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut eaque,
-            laboriosam veritatis, quos non quis ad perspiciatis, totam corporis
-            ea, alias ut unde.
-          </p>
-        </div>
+      <div class="team-member">
+        <img
+          class="mx-auto rounded-circle"
+          src="/base_project/src/assets/img/team/3.jpg"
+          alt="..."
+        />
+        <h4>Mario Ezquerro</h4>
+        <p class="text-muted">Diseñador Jefe</p>
+        <a class="btn btn-dark btn-social mx-2" href="#!">
+          <i class="fab fa-twitter"></i>
+        </a>
+        <a class="btn btn-dark btn-social mx-2" href="#!">
+          <i class="fab fa-facebook-f"></i>
+        </a>
+        <a class="btn btn-dark btn-social mx-2" href="#!">
+          <i class="fab fa-linkedin-in"></i>
+        </a>
       </div>
     </div>
   </section>
@@ -402,361 +382,7 @@
       </div>
     </div>
   </footer>
-  <!-- Portfolio Modals-->
-  <!-- Portfolio item 1 modal popup-->
-  <div
-    class="portfolio-modal modal fade"
-    id="portfolioModal1"
-    tabindex="-1"
-    role="dialog"
-    aria-hidden="true"
-  >
-    <div class="modal-dialog">
-      <div class="modal-content">
-        <div class="close-modal" data-bs-dismiss="modal">
-          <img src="/base_project/src/assets/img/close-icon.svg" alt="Close modal" />
-        </div>
-        <div class="container">
-          <div class="row justify-content-center">
-            <div class="col-lg-8">
-              <div class="modal-body">
-                <!-- Project details-->
-                <h2 class="text-uppercase">Project Name</h2>
-                <p class="item-intro text-muted">
-                  Lorem ipsum dolor sit amet consectetur.
-                </p>
-                <img
-                  class="img-fluid d-block mx-auto"
-                  src="/base_project/src/assets/img/portfolio/1.jpg"
-                  alt="..."
-                />
-                <p>
-                  Use this area to describe your project. Lorem ipsum dolor sit
-                  amet, consectetur adipisicing elit. Est blanditiis dolorem
-                  culpa incidunt minus dignissimos deserunt repellat aperiam
-                  quasi sunt officia expedita beatae cupiditate, maiores
-                  repudiandae, nostrum, reiciendis facere nemo!
-                </p>
-                <ul class="list-inline">
-                  <li>
-                    <strong>Client:</strong>
-                    Threads
-                  </li>
-                  <li>
-                    <strong>Category:</strong>
-                    Illustration
-                  </li>
-                </ul>
-                <button
-                  class="btn btn-primary btn-xl text-uppercase"
-                  data-bs-dismiss="modal"
-                  type="button"
-                >
-                  <i class="fas fa-times me-1"></i>
-                  Close Project
-                </button>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
-  <!-- Portfolio item 2 modal popup-->
-  <div
-    class="portfolio-modal modal fade"
-    id="portfolioModal2"
-    tabindex="-1"
-    role="dialog"
-    aria-hidden="true"
-  >
-    <div class="modal-dialog">
-      <div class="modal-content">
-        <div class="close-modal" data-bs-dismiss="modal">
-          <img src="/base_project/src/assets/img/close-icon.svg" alt="Close modal" />
-        </div>
-        <div class="container">
-          <div class="row justify-content-center">
-            <div class="col-lg-8">
-              <div class="modal-body">
-                <!-- Project details-->
-                <h2 class="text-uppercase">Project Name</h2>
-                <p class="item-intro text-muted">
-                  Lorem ipsum dolor sit amet consectetur.
-                </p>
-                <img
-                  class="img-fluid d-block mx-auto"
-                  src="/base_project/src/assets/img/portfolio/2.jpg"
-                  alt="..."
-                />
-                <p>
-                  Use this area to describe your project. Lorem ipsum dolor sit
-                  amet, consectetur adipisicing elit. Est blanditiis dolorem
-                  culpa incidunt minus dignissimos deserunt repellat aperiam
-                  quasi sunt officia expedita beatae cupiditate, maiores
-                  repudiandae, nostrum, reiciendis facere nemo!
-                </p>
-                <ul class="list-inline">
-                  <li>
-                    <strong>Client:</strong>
-                    Explore
-                  </li>
-                  <li>
-                    <strong>Category:</strong>
-                    Graphic Design
-                  </li>
-                </ul>
-                <button
-                  class="btn btn-primary btn-xl text-uppercase"
-                  data-bs-dismiss="modal"
-                  type="button"
-                >
-                  <i class="fas fa-times me-1"></i>
-                  Close Project
-                </button>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
-  <!-- Portfolio item 3 modal popup-->
-  <div
-    class="portfolio-modal modal fade"
-    id="portfolioModal3"
-    tabindex="-1"
-    role="dialog"
-    aria-hidden="true"
-  >
-    <div class="modal-dialog">
-      <div class="modal-content">
-        <div class="close-modal" data-bs-dismiss="modal">
-          <img src="/base_project/src/assets/img/close-icon.svg" alt="Close modal" />
-        </div>
-        <div class="container">
-          <div class="row justify-content-center">
-            <div class="col-lg-8">
-              <div class="modal-body">
-                <!-- Project details-->
-                <h2 class="text-uppercase">Project Name</h2>
-                <p class="item-intro text-muted">
-                  Lorem ipsum dolor sit amet consectetur.
-                </p>
-                <img
-                  class="img-fluid d-block mx-auto"
-                  src="/base_project/src/assets/img/portfolio/3.jpg"
-                  alt="..."
-                />
-                <p>
-                  Use this area to describe your project. Lorem ipsum dolor sit
-                  amet, consectetur adipisicing elit. Est blanditiis dolorem
-                  culpa incidunt minus dignissimos deserunt repellat aperiam
-                  quasi sunt officia expedita beatae cupiditate, maiores
-                  repudiandae, nostrum, reiciendis facere nemo!
-                </p>
-                <ul class="list-inline">
-                  <li>
-                    <strong>Client:</strong>
-                    Finish
-                  </li>
-                  <li>
-                    <strong>Category:</strong>
-                    Identity
-                  </li>
-                </ul>
-                <button
-                  class="btn btn-primary btn-xl text-uppercase"
-                  data-bs-dismiss="modal"
-                  type="button"
-                >
-                  <i class="fas fa-times me-1"></i>
-                  Close Project
-                </button>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
-  <!-- Portfolio item 4 modal popup-->
-  <div
-    class="portfolio-modal modal fade"
-    id="portfolioModal4"
-    tabindex="-1"
-    role="dialog"
-    aria-hidden="true"
-  >
-    <div class="modal-dialog">
-      <div class="modal-content">
-        <div class="close-modal" data-bs-dismiss="modal">
-          <img src="/base_project/src/assets/img/close-icon.svg" alt="Close modal" />
-        </div>
-        <div class="container">
-          <div class="row justify-content-center">
-            <div class="col-lg-8">
-              <div class="modal-body">
-                <!-- Project details-->
-                <h2 class="text-uppercase">Project Name</h2>
-                <p class="item-intro text-muted">
-                  Lorem ipsum dolor sit amet consectetur.
-                </p>
-                <img
-                  class="img-fluid d-block mx-auto"
-                  src="/base_project/src/assets/img/portfolio/4.jpg"
-                  alt="..."
-                />
-                <p>
-                  Use this area to describe your project. Lorem ipsum dolor sit
-                  amet, consectetur adipisicing elit. Est blanditiis dolorem
-                  culpa incidunt minus dignissimos deserunt repellat aperiam
-                  quasi sunt officia expedita beatae cupiditate, maiores
-                  repudiandae, nostrum, reiciendis facere nemo!
-                </p>
-                <ul class="list-inline">
-                  <li>
-                    <strong>Client:</strong>
-                    Lines
-                  </li>
-                  <li>
-                    <strong>Category:</strong>
-                    Branding
-                  </li>
-                </ul>
-                <button
-                  class="btn btn-primary btn-xl text-uppercase"
-                  data-bs-dismiss="modal"
-                  type="button"
-                >
-                  <i class="fas fa-times me-1"></i>
-                  Close Project
-                </button>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
-  <!-- Portfolio item 5 modal popup-->
-  <div
-    class="portfolio-modal modal fade"
-    id="portfolioModal5"
-    tabindex="-1"
-    role="dialog"
-    aria-hidden="true"
-  >
-    <div class="modal-dialog">
-      <div class="modal-content">
-        <div class="close-modal" data-bs-dismiss="modal">
-          <img src="/base_project/src/assets/img/close-icon.svg" alt="Close modal" />
-        </div>
-        <div class="container">
-          <div class="row justify-content-center">
-            <div class="col-lg-8">
-              <div class="modal-body">
-                <!-- Project details-->
-                <h2 class="text-uppercase">Project Name</h2>
-                <p class="item-intro text-muted">
-                  Lorem ipsum dolor sit amet consectetur.
-                </p>
-                <img
-                  class="img-fluid d-block mx-auto"
-                  src="/base_project/src/assets/img/portfolio/5.jpg"
-                  alt="..."
-                />
-                <p>
-                  Use this area to describe your project. Lorem ipsum dolor sit
-                  amet, consectetur adipisicing elit. Est blanditiis dolorem
-                  culpa incidunt minus dignissimos deserunt repellat aperiam
-                  quasi sunt officia expedita beatae cupiditate, maiores
-                  repudiandae, nostrum, reiciendis facere nemo!
-                </p>
-                <ul class="list-inline">
-                  <li>
-                    <strong>Client:</strong>
-                    Southwest
-                  </li>
-                  <li>
-                    <strong>Category:</strong>
-                    Website Design
-                  </li>
-                </ul>
-                <button
-                  class="btn btn-primary btn-xl text-uppercase"
-                  data-bs-dismiss="modal"
-                  type="button"
-                >
-                  <i class="fas fa-times me-1"></i>
-                  Close Project
-                </button>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
-  <!-- Portfolio item 6 modal popup-->
-  <div
-    class="portfolio-modal modal fade"
-    id="portfolioModal6"
-    tabindex="-1"
-    role="dialog"
-    aria-hidden="true"
-  >
-    <div class="modal-dialog">
-      <div class="modal-content">
-        <div class="close-modal" data-bs-dismiss="modal">
-          <img src="/base_project/src/assets/img/close-icon.svg" alt="Close modal" />
-        </div>
-        <div class="container">
-          <div class="row justify-content-center">
-            <div class="col-lg-8">
-              <div class="modal-body">
-                <!-- Project details-->
-                <h2 class="text-uppercase">Project Name</h2>
-                <p class="item-intro text-muted">
-                  Lorem ipsum dolor sit amet consectetur.
-                </p>
-                <img
-                  class="img-fluid d-block mx-auto"
-                  src="/base_project/src/assets/img/portfolio/6.jpg"
-                  alt="..."
-                />
-                <p>
-                  Use this area to describe your project. Lorem ipsum dolor sit
-                  amet, consectetur adipisicing elit. Est blanditiis dolorem
-                  culpa incidunt minus dignissimos deserunt repellat aperiam
-                  quasi sunt officia expedita beatae cupiditate, maiores
-                  repudiandae, nostrum, reiciendis facere nemo!
-                </p>
-                <ul class="list-inline">
-                  <li>
-                    <strong>Client:</strong>
-                    Window
-                  </li>
-                  <li>
-                    <strong>Category:</strong>
-                    Photography
-                  </li>
-                </ul>
-                <button
-                  class="btn btn-primary btn-xl text-uppercase"
-                  data-bs-dismiss="modal"
-                  type="button"
-                >
-                  <i class="fas fa-times me-1"></i>
-                  Close Project
-                </button>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
+
   <!-- Bootstrap core JS-->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
   <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * *-->
