--- a/base_project/src/app/pages/home/plantilla/plantilla.component.html
+++ b/base_project/src/app/pages/home/plantilla/plantilla.component.html
@@ -3,7 +3,7 @@
   <nav class="navbar navbar-expand-lg navbar-dark fixed-top" id="mainNav">
     <div class="container">
       <a class="navbar-brand" href="#page-top"
-        ><img src="/base_project/src/assets/img/navbar-logo.svg" alt="logo" />
+        ><img src="../assets/img/navbar-logo.svg" alt="logo" />
       </a>
       <button
         class="navbar-toggler"
@@ -35,7 +35,6 @@
     <div class="container">
       <div class="masthead-subheading">Welcome To Our Studio!</div>
       <div class="masthead-heading text-uppercase">It's Nice To Meet You</div>
-      <a class="btn btn-primary btn-xl text-uppercase" href="#services">Tell Me More</a>
     </div>
   </header>
 
@@ -64,7 +63,7 @@
               </div>
               <img
                 class="img-fluid"
-                src="/base_project/src/assets/img/portfolio/1.jpg"
+                src="../assets/img/portfolio/1.jpg"
                 alt="..."
               />
             </a>
@@ -91,7 +90,7 @@
               </div>
               <img
                 class="img-fluid"
-                src="/base_project/src/assets/img/portfolio/2.jpg"
+                src="../assets/img/portfolio/2.jpg"
                 alt="..."
               />
             </a>
@@ -118,7 +117,7 @@
               </div>
               <img
                 class="img-fluid"
-                src="/base_project/src/assets/img/portfolio/3.jpg"
+                src="../assets/img/portfolio/3.jpg"
                 alt="..."
               />
             </a>
@@ -145,7 +144,7 @@
               </div>
               <img
                 class="img-fluid"
-                src="/base_project/src/assets/img/portfolio/4.jpg"
+                src="../assets/img/portfolio/4.jpg"
                 alt="..."
               />
             </a>
@@ -172,7 +171,7 @@
               </div>
               <img
                 class="img-fluid"
-                src="/base_project/src/assets/img/portfolio/5.jpg"
+                src="../assets/img/portfolio/5.jpg"
                 alt="..."
               />
             </a>
@@ -199,7 +198,7 @@
               </div>
               <img
                 class="img-fluid"
-                src="/base_project/src/assets/img/portfolio/6.jpg"
+                src="../assets/img/portfolio/6.jpg"
                 alt="..."
               />
             </a>
@@ -227,7 +226,7 @@
       <div class="team-member">
         <img
           class="mx-auto rounded-circle"
-          src="/base_project/src/assets/img/team/3.jpg"
+          src="../assets/img/team/3.jpg"
           alt="..."
         />
         <h4>Mario Ezquerro</h4>
@@ -382,12 +381,4 @@
       </div>
     </div>
   </footer>
-
-  <!-- Bootstrap core JS-->
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
-  <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * *-->
-  <!-- * *                               SB Forms JS                               * *-->
-  <!-- * * Activate your form at https://startbootstrap.com/solution/contact-forms * *-->
-  <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * *-->
-  <script src="https://cdn.startbootstrap.com/sb-forms-latest.js"></script>
 </body>
