--- a/base_project/src/app/pages/home/plantilla/plantilla.component.html
+++ b/base_project/src/app/pages/home/plantilla/plantilla.component.html
@@ -1,40 +1,12 @@
 <body id="page-top">
   <!-- Navigation-->
-  <nav class="navbar navbar-expand-lg navbar-dark fixed-top" id="mainNav">
-    <div class="container">
-      <a class="navbar-brand" href="#page-top"
-        ><img src="../assets/img/navbar-logo.svg" alt="logo" />
-      </a>
-      <button
-        class="navbar-toggler"
-        type="button"
-        data-bs-toggle="collapse"
-        data-bs-target="#navbarResponsive"
-        aria-controls="navbarResponsive"
-        aria-expanded="false"
-        aria-label="Toggle navigation"
-      >
-        Menu
-        <i class="fas fa-bars ms-1"></i>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarResponsive">
-        <ul class="navbar-nav text-uppercase ms-auto py-4 py-lg-0">
-          <li class="nav-item">
-            <a class="nav-link" href="#portfolio">Portfolio</a>
-          </li>
-          <li class="nav-item"><a class="nav-link" href="#team">Team</a></li>
-          <li class="nav-item">
-            <a class="nav-link" href="#contact">Contact</a>
-          </li>
-        </ul>
-      </div>
-    </div>
-  </nav>
-  <!-- Masthead-->
+  <app-nav-component></app-nav-component>
+
+  <!-- Presentation-->
   <header class="masthead">
     <div class="container">
-      <div class="masthead-subheading">Welcome To Our Studio!</div>
-      <div class="masthead-heading text-uppercase">It's Nice To Meet You</div>
+      <div class="masthead-subheading">Bienvenido a</div>
+      <div class="masthead-heading text-uppercase">Michel Faraday</div>
     </div>
   </header>
 
@@ -42,214 +14,24 @@
   <section class="page-section bg-light" id="portfolio">
     <div class="container">
       <div class="text-center">
-        <h2 class="section-heading text-uppercase">Portfolio</h2>
+        <h2 class="section-heading text-uppercase">Inventos</h2>
         <h3 class="section-subheading text-muted">
-          Lorem ipsum dolor sit amet consectetur.
+          Una pequeña coleccion de las maravillas del cientifico Inglés.
         </h3>
       </div>
       <div class="row">
-        <div class="col-lg-4 col-sm-6 mb-4">
-          <!-- Portfolio item 1-->
-          <div class="portfolio-item">
-            <a
-              class="portfolio-link"
-              data-bs-toggle="modal"
-              href="#portfolioModal1"
-            >
-              <div class="portfolio-hover">
-                <div class="portfolio-hover-content">
-                  <i class="fas fa-plus fa-3x"></i>
-                </div>
-              </div>
-              <img
-                class="img-fluid"
-                src="../assets/img/portfolio/1.jpg"
-                alt="..."
-              />
-            </a>
-            <div class="portfolio-caption">
-              <div class="portfolio-caption-heading">Threads</div>
-              <div class="portfolio-caption-subheading text-muted">
-                Illustration
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="col-lg-4 col-sm-6 mb-4">
-          <!-- Portfolio item 2-->
-          <div class="portfolio-item">
-            <a
-              class="portfolio-link"
-              data-bs-toggle="modal"
-              href="#portfolioModal2"
-            >
-              <div class="portfolio-hover">
-                <div class="portfolio-hover-content">
-                  <i class="fas fa-plus fa-3x"></i>
-                </div>
-              </div>
-              <img
-                class="img-fluid"
-                src="../assets/img/portfolio/2.jpg"
-                alt="..."
-              />
-            </a>
-            <div class="portfolio-caption">
-              <div class="portfolio-caption-heading">Explore</div>
-              <div class="portfolio-caption-subheading text-muted">
-                Graphic Design
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="col-lg-4 col-sm-6 mb-4">
-          <!-- Portfolio item 3-->
-          <div class="portfolio-item">
-            <a
-              class="portfolio-link"
-              data-bs-toggle="modal"
-              href="#portfolioModal3"
-            >
-              <div class="portfolio-hover">
-                <div class="portfolio-hover-content">
-                  <i class="fas fa-plus fa-3x"></i>
-                </div>
-              </div>
-              <img
-                class="img-fluid"
-                src="../assets/img/portfolio/3.jpg"
-                alt="..."
-              />
-            </a>
-            <div class="portfolio-caption">
-              <div class="portfolio-caption-heading">Finish</div>
-              <div class="portfolio-caption-subheading text-muted">
-                Identity
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="col-lg-4 col-sm-6 mb-4 mb-lg-0">
-          <!-- Portfolio item 4-->
-          <div class="portfolio-item">
-            <a
-              class="portfolio-link"
-              data-bs-toggle="modal"
-              href="#portfolioModal4"
-            >
-              <div class="portfolio-hover">
-                <div class="portfolio-hover-content">
-                  <i class="fas fa-plus fa-3x"></i>
-                </div>
-              </div>
-              <img
-                class="img-fluid"
-                src="../assets/img/portfolio/4.jpg"
-                alt="..."
-              />
-            </a>
-            <div class="portfolio-caption">
-              <div class="portfolio-caption-heading">Lines</div>
-              <div class="portfolio-caption-subheading text-muted">
-                Branding
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="col-lg-4 col-sm-6 mb-4 mb-sm-0">
-          <!-- Portfolio item 5-->
-          <div class="portfolio-item">
-            <a
-              class="portfolio-link"
-              data-bs-toggle="modal"
-              href="#portfolioModal5"
-            >
-              <div class="portfolio-hover">
-                <div class="portfolio-hover-content">
-                  <i class="fas fa-plus fa-3x"></i>
-                </div>
-              </div>
-              <img
-                class="img-fluid"
-                src="../assets/img/portfolio/5.jpg"
-                alt="..."
-              />
-            </a>
-            <div class="portfolio-caption">
-              <div class="portfolio-caption-heading">Southwest</div>
-              <div class="portfolio-caption-subheading text-muted">
-                Website Design
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="col-lg-4 col-sm-6">
-          <!-- Portfolio item 6-->
-          <div class="portfolio-item">
-            <a
-              class="portfolio-link"
-              data-bs-toggle="modal"
-              href="#portfolioModal6"
-            >
-              <div class="portfolio-hover">
-                <div class="portfolio-hover-content">
-                  <i class="fas fa-plus fa-3x"></i>
-                </div>
-              </div>
-              <img
-                class="img-fluid"
-                src="../assets/img/portfolio/6.jpg"
-                alt="..."
-              />
-            </a>
-            <div class="portfolio-caption">
-              <div class="portfolio-caption-heading">Window</div>
-              <div class="portfolio-caption-subheading text-muted">
-                Photography
-              </div>
-            </div>
-          </div>
-        </div>
+        <app-inventos-component></app-inventos-component>
       </div>
     </div>
   </section>
 
-  <!-- Team-->
-  <section class="page-section bg-light" id="team">
-    <div class="container">
-      <div class="text-center">
-        <h2 class="section-heading text-uppercase">Nuestro equipo</h2>
-        <h3 class="section-subheading text-muted">
-          Realizado en Diseño de Intefaces via Angular, trabajo de evaluacion parte 1.
-        </h3>
-      </div>
-      <div class="team-member">
-        <img
-          class="mx-auto rounded-circle"
-          src="../assets/img/team/3.jpg"
-          alt="..."
-        />
-        <h4>Mario Ezquerro</h4>
-        <p class="text-muted">Diseñador Jefe</p>
-        <a class="btn btn-dark btn-social mx-2" href="#!">
-          <i class="fab fa-twitter"></i>
-        </a>
-        <a class="btn btn-dark btn-social mx-2" href="#!">
-          <i class="fab fa-facebook-f"></i>
-        </a>
-        <a class="btn btn-dark btn-social mx-2" href="#!">
-          <i class="fab fa-linkedin-in"></i>
-        </a>
-      </div>
-    </div>
-  </section>
   <!-- Contact-->
   <section class="page-section" id="contact">
     <div class="container">
       <div class="text-center">
-        <h2 class="section-heading text-uppercase">Contact Us</h2>
+        <h2 class="section-heading text-uppercase">Contactanos</h2>
         <h3 class="section-subheading text-muted">
-          Lorem ipsum dolor sit amet consectetur.
+          Si esta pagina te ha gustado o quieres comentar algo puedes hacerlo mediante nus.
         </h3>
       </div>
       <!-- * * * * * * * * * * * * * * *-->
@@ -264,58 +46,39 @@
           <div class="col-md-6">
             <div class="form-group">
               <!-- Name input-->
-              <input
-                class="form-control"
-                id="name"
-                type="text"
-                placeholder="Your Name *"
-                data-sb-validations="required"
-              />
+              <input class="form-control" id="name" type="text" placeholder="Your Name *"
+                data-sb-validations="required" />
               <div class="invalid-feedback" data-sb-feedback="name:required">
-                A name is required.
+                Se requiere un nombre.
               </div>
             </div>
             <div class="form-group">
               <!-- Email address input-->
-              <input
-                class="form-control"
-                id="email"
-                type="email"
-                placeholder="Your Email *"
-                data-sb-validations="required,email"
-              />
+              <input class="form-control" id="email" type="email" placeholder="Your Email *"
+                data-sb-validations="required,email" />
               <div class="invalid-feedback" data-sb-feedback="email:required">
-                An email is required.
+                Se requiere un correo.
               </div>
               <div class="invalid-feedback" data-sb-feedback="email:email">
-                Email is not valid.
+                Correo no valido.
               </div>
             </div>
             <div class="form-group mb-md-0">
               <!-- Phone number input-->
-              <input
-                class="form-control"
-                id="phone"
-                type="tel"
-                placeholder="Your Phone *"
-                data-sb-validations="required"
-              />
+              <input class="form-control" id="phone" type="tel" placeholder="Your Phone *"
+                data-sb-validations="required" />
               <div class="invalid-feedback" data-sb-feedback="phone:required">
-                A phone number is required.
+                Se requiere un número de telefono.
               </div>
             </div>
           </div>
           <div class="col-md-6">
             <div class="form-group form-group-textarea mb-md-0">
               <!-- Message input-->
-              <textarea
-                class="form-control"
-                id="message"
-                placeholder="Your Message *"
-                data-sb-validations="required"
-              ></textarea>
+              <textarea class="form-control" id="message" placeholder="Your Message *"
+                data-sb-validations="required"></textarea>
               <div class="invalid-feedback" data-sb-feedback="message:required">
-                A message is required.
+                Se requiere un mensaje.
               </div>
             </div>
           </div>
@@ -329,9 +92,9 @@
             <div class="fw-bolder">Form submission successful!</div>
             To activate this form, sign up at
             <br />
-            <a href="https://startbootstrap.com/solution/contact-forms"
-              >https://startbootstrap.com/solution/contact-forms</a
-            >
+            <a href="https://startbootstrap.com/solution/contact-forms">
+              https://startbootstrap.com/solution/contact-forms
+            </a>
           </div>
         </div>
         <!-- Submit error message-->
@@ -339,46 +102,17 @@
         <!-- This is what your users will see when there is-->
         <!-- an error submitting the form-->
         <div class="d-none" id="submitErrorMessage">
-          <div class="text-center text-danger mb-3">Error sending message!</div>
+          <div class="text-center text-danger mb-3">Error enviando el mensaje</div>
         </div>
         <!-- Submit Button-->
         <div class="text-center">
-          <button
-            class="btn btn-primary btn-xl text-uppercase disabled"
-            id="submitButton"
-            type="submit"
-          >
-            Send Message
+          <button class="btn btn-primary btn-xl text-uppercase disabled" id="submitButton" type="submit">
+            Enviar
           </button>
         </div>
       </form>
     </div>
   </section>
-  <!-- Footer-->
-  <footer class="footer py-4">
-    <div class="container">
-      <div class="row align-items-center">
-        <div class="col-lg-4 text-lg-start">
-          Copyright &copy; Your Website 2021
-        </div>
-        <div class="col-lg-4 my-3 my-lg-0">
-          <a class="btn btn-dark btn-social mx-2" href="#!"
-            ><i class="fab fa-twitter"></i
-          ></a>
-          <a class="btn btn-dark btn-social mx-2" href="#!"
-            ><i class="fab fa-facebook-f"></i
-          ></a>
-          <a class="btn btn-dark btn-social mx-2" href="#!"
-            ><i class="fab fa-linkedin-in"></i
-          ></a>
-        </div>
-        <div class="col-lg-4 text-lg-end">
-          <a class="link-dark text-decoration-none me-3" href="#!"
-            >Privacy Policy</a
-          >
-          <a class="link-dark text-decoration-none" href="#!">Terms of Use</a>
-        </div>
-      </div>
-    </div>
-  </footer>
+
+  <app-footer-component></app-footer-component>
 </body>
