--- a/base_project/src/app/components/inventos-component/inventos-component.component.html
+++ b/base_project/src/app/components/inventos-component/inventos-component.component.html
@@ -2,47 +2,27 @@
     <div class="container">
         <div class="text-center">
             <h2 class="section-heading text-uppercase">Inventos</h2>
-            <h3 class="section-subheading text-muted">Una pequeña coleccion de las maravillas del cientifico Inglés.</h3>
+            <h3 class="section-subheading text-muted">Una pequeña coleccion de las maravillas del cientifico Inglés.
+            </h3>
         </div>
         <div class="row">
-            <ng-container *ngFor="let Invento of inventos">               
-                <ng-template [ngIf]="{{Invento.id}} < 3; else otro">
-                    <div class="col-lg-4 col-sm-6 mb-4">
-                        <div class=" portfolio-item">
-                            <a class="portfolio-link" data-bs-toggle="modal" href="#portfolioModal1">
-                                <div class="portfolio-hover">
-                                    <div class="portfolio-hover-content">
-                                        <i class="fas fa-plus fa-3x"></i>
-                                    </div>
+            <ng-container *ngFor="let Invento of inventos">
+                <div class="col-lg-4 col-sm-6 mb-4">
+                    <div class=" portfolio-item">
+                        <a class="portfolio-link" data-bs-toggle="modal" href="#portfolioModal1">
+                            <div class="portfolio-hover">
+                                <div class="portfolio-hover-content">
+                                    <i class="fas fa-plus fa-3x"></i>
                                 </div>
-                                <img class="img-fluid" [src]="Invento.img" alt="..." />
-                            </a>
-                            <div class="portfolio-caption">
-                                <div class="portfolio-caption-heading">{{ Invento.nombre }}</div>
-                                <div class="portfolio-caption-subheading text-muted">{{ Invento.desc }}</div>
                             </div>
+                            <img class="img-fluid" [src]="Invento.img" alt="..." />
+                        </a>
+                        <div class="portfolio-caption">
+                            <div class="portfolio-caption-heading">{{ Invento.nombre }}</div>
+                            <div class="portfolio-caption-subheading text-muted">{{ Invento.desc }}</div>
                         </div>
                     </div>
-                </ng-template>
-
-                <ng-template #otro>
-                    <div class="col-lg-4 col-sm-6 mb-4 mb-lg-0">
-                        <div class=" portfolio-item">
-                            <a class="portfolio-link" data-bs-toggle="modal" href="#portfolioModal1">
-                                <div class="portfolio-hover">
-                                    <div class="portfolio-hover-content">
-                                        <i class="fas fa-plus fa-3x"></i>
-                                    </div>
-                                </div>
-                                <img class="img-fluid" [src]="Invento.img" alt="..." />
-                            </a>
-                            <div class="portfolio-caption">
-                                <div class="portfolio-caption-heading">{{ Invento.nombre }}</div>
-                                <div class="portfolio-caption-subheading text-muted">{{ Invento.desc }}</div>
-                            </div>
-                        </div>
-                    </div>
-                </ng-template>
+                </div>
             </ng-container>
         </div>
     </div>
