--- a/base_project/src/app/app.component.html
+++ b/base_project/src/app/app.component.html
@@ -1,3 +1,3 @@
 <!-- CAMBIAR A ROUTING MAS ADELANTE -->
 <app-plantilla></app-plantilla>
-<!-- <app-routing></app-routing> -->
+<!-- <router-outlet></router-outlet> -->
