--- a/base_project/src/app/components/forbidden-url-component/forbidden-url-component.component.css
+++ b/base_project/src/app/components/forbidden-url-component/forbidden-url-component.component.css
@@ -5,7 +5,6 @@
 body {
   padding: 0;
   margin: 0;
-  background-color: #212529;
 }
 #notfound {
   position: relative;
@@ -14,7 +13,7 @@ body {
 #notfound .notfound {
   position: absolute;
   left: 50%;
-  top: 50%;
+  top: 40%;
   -webkit-transform: translate(-50%, -50%);
   -ms-transform: translate(-50%, -50%);
   transform: translate(-50%, -50%);
@@ -40,13 +39,13 @@ body {
   font-size: 252px;
   font-weight: 900;
   margin: 0;
-  color: white;
+  color: #262626;
   text-transform: uppercase;
   letter-spacing: -40px;
   margin-left: -20px;
 }
 .notfound .notfound-404 h1 > span {
-  text-shadow: -8px 0 0 #212529;
+  text-shadow: -8px 0 0 #fff;
 }
 .notfound .notfound-404 h3 {
   font-family: cabin, sans-serif;
@@ -54,7 +53,7 @@ body {
   font-size: 16px;
   font-weight: 700;
   text-transform: uppercase;
-  color: white;
+  color: #262626;
   margin: 0;
   letter-spacing: 3px;
   padding-left: 6px;
@@ -64,7 +63,7 @@ body {
   font-size: 20px;
   font-weight: 400;
   text-transform: uppercase;
-  color: white;
+  color: #000;
   margin-top: 0;
   margin-bottom: 25px;
 }
