--- a/base_project/src/app/components/forbidden-url-component/forbidden-url-component.component.html
+++ b/base_project/src/app/components/forbidden-url-component/forbidden-url-component.component.html
@@ -1,5 +1,7 @@
-<body>
-    <app-nav-component></app-nav-component>
+<body id="page-top">
+    <div class="nav-auto-display">
+        <app-nav-component></app-nav-component>
+    </div>
     <div id="notfound">
         <div class="notfound">
             <div class="notfound-404">
