--- a/base_project/src/app/components/inventos-component/inventos-component.component.html
+++ b/base_project/src/app/components/inventos-component/inventos-component.component.html
@@ -9,7 +9,7 @@
             <ng-container *ngFor="let Invento of inventos">
                 <div class="col-lg-4 col-sm-6 mb-4">
                     <div class=" portfolio-item">
-                        <a class="portfolio-link" data-bs-toggle="modal" (click)="abrirElemento(1)">
+                        <a class="portfolio-link" data-bs-toggle="modal" [routerLink]="['inventos', Invento.id]">
                             <div class="portfolio-hover">
                                 <div class="portfolio-hover-content">
                                     <i class="fas fa-plus fa-3x"></i>
