--- a/base_project/src/app/components/nav-component/nav-component.component.html
+++ b/base_project/src/app/components/nav-component/nav-component.component.html
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-expand-lg navbar-dark fixed-top" id="mainNav">
     <div class="container">
-        <span class="navbar-brand comforter">MARIO</span>
+        <span class="navbar-brand comforter">by: MARIO</span>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive"
             aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
             Menu
