API lista para inventos

--- a/WEB/src/app/components/inventos-component/inventos-component.component.html
+++ b/WEB/src/app/components/inventos-component/inventos-component.component.html
@@ -19,7 +19,7 @@
                         </a>
                         <div class="portfolio-caption">
                             <div class="portfolio-caption-heading">{{ Invento.nombre }}</div>
-                            <div class="portfolio-caption-subheading text-muted">{{ Invento.desc }}</div>
+                            <div class="portfolio-caption-subheading text-muted">{{ Invento.descr }}</div>
                         </div>
                     </div>
                 </div>
